<resources>
    <string name="app_name">Channelize</string>

    <!-- TaskActivity Strings -->
    <string name="title_activity_task">TaskActivity</string>
    <string name="hint_task_name">Task name</string>
    <string name="hint_note">Note</string>
    <string name="label_due_date">Due date</string>
    <string name="new_task">New task</string>
    <string name="save">Save</string>
    <string name="no_change">No changes made</string>

    <!-- TaskList Strings -->
    <string name="today">Today</string>
    <string name="no_due_date">No due date</string>
    <string name="edit_task">Edit task</string>
    <string name="none">None</string>
    <string name="tap_to_add_tasks">Tap \'+\' to add tasks</string>
    <string name="title_activity_completed_tasks">Completed tasks</string>
    <string name="no_tasks">No tasks</string>
    <string name="view_completed">View completed tasks</string>
    <string name="stop_ongoing_task">Stop the ongoing task first</string>
    <string name="already_selected">Task already selected</string>
    <string name="task_deleted">Task deleted</string>
    <string name="delete_task">Delete Task?</string>
    <string name="delete">delete</string>
    <string name="task_updated">Task updated</string>
    <string name="task_added">Task added</string>
    <string name="marked_complete">Marked as complete</string>
    <string name="marked_pending">Marked as pending</string>
    <string name="cannot_edit">Cannot edit active task</string>
    <string name="cannot_delete">Cannot delete active task</string>

    <!-- Timer Strings -->
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="stop">stop</string>
    <string name="close">close</string>
    <string name="skip">skip</string>
    <string name="press_exit">Press again to exit</string>
    <string name="free_task">Free task</string>
    <string name="break_over">Break over</string>
    <string name="resume_work">Resume work?</string>
    <string name="take_a_break">Take a break?</string>
    <string name="work_session_complete">Work session complete</string>
    <string name="start_long_break">Start long break?</string>
    <string name="start_short_break">Start short break?</string>

    <!-- Preference Names -->
    <string name="title_settings">Settings</string>
    <string name="category_timer">Timer durations</string>
    <string name="label_work">Work duration</string>
    <string name="label_break">Break duration</string>
    <string name="label_longBreak">Long break duration</string>
    <string name="label_sessions">Work sessions before a long break</string>
    <string name="category_work">Work session</string>
    <string name="label_silent">Disable sound and vibration</string>
    <string name="label_wifi">Disable Wi-Fi</string>
    <string name="category_notification">Notification settings</string>
    <string name="label_sound">Sound</string>
    <string name="label_vibrate">Vibration</string>
    <string name="label_screen_on">Keep screen ON</string>
    <string name="label_resume_app">Resume app on session end</string>

    <!-- Preference Keys -->
    <string name="key_work">pref_work</string>
    <string name="key_break">pref_break</string>
    <string name="key_longBreak">pref_longBreak</string>
    <string name="key_sessions">pref_sessions</string>
    <string name="key_ringerMode">pref_ringerMode</string>
    <string name="key_wifi">pref_wifi</string>
    <string name="key_sound">pref_sound</string>
    <string name="key_vibrate">"pref_vibrate</string>
    <string name="key_screen_on">"pref_screen_on</string>
    <string name="key_resume_app">"pref_resume_app"</string>

    <!-- Preference Measurements -->
    <string name="minutes">minutes</string>
    <string name="sessions">sessions</string>
    <string name="send_feedback">Send feedback</string>

    <!-- About Activity -->
    <string name="title_activity_about">About</string>
    <string name="version">Version 1.0.0</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Swapnil Madavi</string>
    <string name="licenses_heading">Open Source Licenses</string>
    <string name="rate_app">Rate this app</string>
    <string name="dicard">DISCARD</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="enter_task_first">Enter a task first</string>

    <!--Update Dialog-->
    <string name="dialog_wip_notice">After your abiding support for this app for over a year, I have began working on a complete overhaul to fix some major compatibility issues caused by Android updates and policy changes.

        \n\nI am listening to you, carefully going through all reviews and planning future updates which will include all possible suggestions given by you. So, if you have any suggestions, you can write to me via \"Send feedback\" option in the app.
    </string>
    <string name="dialog_wip_title">Thanks for using Channelize!</string>

</resources>
