<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_view_completed"
        android:title="@string/view_completed"
        app:showAsAction="never"  />
    <item android:id="@+id/action_settings"
        android:title="@string/title_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_rate_app"
        android:title="@string/rate_app"
        app:showAsAction="never" />
    <item android:id="@+id/action_send_feedback"
        android:title="@string/send_feedback"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/title_activity_about"
        app:showAsAction="never" />
</menu>