<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/vertical_margin_small"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorCardBackground">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_channelize"
            android:layout_margin="@dimen/vertical_margin_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="@dimen/secondary_text_size"
            android:textColor="@color/colorPrimaryText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/about_card_padding"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorCardBackground">

        <TextView
            android:id="@+id/text_developer_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/vertical_margin_small"/>

        <TextView
            android:id="@+id/text_developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_name"
            android:textSize="@dimen/secondary_text_size"
            android:textColor="@color/colorPrimaryText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/colorCardBackground">

        <TextView
            android:id="@+id/text_license_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licenses_heading"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/vertical_margin_small"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin_small"
        android:paddingBottom="@dimen/vertical_margin_small"
        android:background="@color/colorCardBackground">
        <WebView
            android:id="@+id/webView_licenses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>

