<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.MainActivity">

    <com.pascalwelsch.holocircularprogressbar.HoloCircularProgressBar
        android:id="@+id/circular_progressBar"
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:progress_background_color="@color/colorPrimaryDark"
        app:progress_color="@color/colorWhite"
        app:stroke_width="5dp"
        app:progress="1.0"
        app:marker_progress="1.0"
        app:thumb_visible="false"
        app:marker_visible="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="40sp"
        android:textColor="@color/colorWhite"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/circular_progressBar"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/circular_progressBar"
        app:layout_constraintTop_toTopOf="@+id/circular_progressBar"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/circular_progressBar"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="@color/colorWhite"
        android:background="@drawable/start_button"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/circular_progressBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:textColor="@color/colorWhite"
        android:background="@drawable/transparent_button"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/circular_progressBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:textColor="@color/colorWhite"
        app:backgroundTint="#00e676"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/circular_progressBar"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
        tools:layout_editor_absoluteX="92dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:textColor="@color/colorWhite"
        app:backgroundTint="#ef5350"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/circular_progressBar"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        tools:layout_editor_absoluteX="180dp" />

</android.support.constraint.ConstraintLayout>
