<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.apps.swapyx.channelize.Activities.TaskActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_task"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/vertical_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        android:scrollbars="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_task_name"
                android:textSize="24sp"
                android:inputType="textCapSentences"
                android:layout_marginBottom="@dimen/vertical_margin_small"/>

        </android.support.design.widget.TextInputLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <android.support.design.widget.TextInputLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1">

               <android.support.design.widget.TextInputEditText
                   android:id="@+id/edit_datePicker"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/label_due_date"
                   android:inputType="text"
                   android:focusable="false"
                   android:layout_marginBottom="@dimen/vertical_margin_small"/>

           </android.support.design.widget.TextInputLayout>

           <ImageView
               android:id="@+id/image_view_clear"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:layout_gravity="center_vertical"
               app:srcCompat="@drawable/ic_clear_black_24dp"
               android:visibility="gone"/>
       </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_note"
                android:inputType="textCapSentences|textMultiLine"
                android:layout_marginBottom="@dimen/vertical_margin_small"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>
